remove the initial script and add bootstrap online

--- a/index.html
+++ b/index.html
@@ -1,324 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-
-    <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet" />
-
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-
-    <!-- style -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>closeheat!</title>
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous" />
   </head>
-
   <body>
-    <!-- header -->
-    <div class="navbar-fixed">
-      <nav class="white">
-        <div class="container">
-          <div class="nav-wrapper">
-            <a href="#!" class="brand-logo blue-text text-darken-4"
-              >closeheat!</a
-            >
-            <a href="#" data-target="mobile-app" class="sidenav-trigger">
-              <i class="material-icons black-text">menu</i>
-            </a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="#home" class="black-text">Home</a></li>
-              <li><a href="#layanan" class="black-text">Layanan</a></li>
-              <li>
-                <a href="/_pages/tentang.html" class="black-text"
-                  >Tentang Kami
-                </a>
-              </li>
-              <li><a href="#Portfolio" class="black-text">Portfolio </a></li>
-              <li><a href="#kontak" class="black-text">Kontak</a></li>
-              <li><a class="btn blue darken-4 white-text">LOGIN</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <!-- mobile app -->
-    <ul class="sidenav" id="mobile-app">
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="#layanan">Layanan</a></li>
-      <li><a href="/_pages/tentang.html">Tentang Kami</a></li>
-      <li><a href="#Portfolio">Portfolio </a></li>
-      <li><a href="#kontak">Kontak Karir</a></li>
-    </ul>
-
-    <!-- slider -->
-    <div class="slider">
-      <ul class="slides">
-        <li>
-          <img src="assets/img/slider1.jpg" />
-          <!-- random image -->
-          <div class="caption right-align">
-            <h3>Pengembangan Aplikasi Web!</h3>
-            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
-          </div>
-        </li>
-        <li>
-          <img src="assets/img/slider2.jpg" />
-          <!-- random image -->
-          <div class="caption left-align">
-            <h3>Mengintegrasikan sistem yang sudah ada!</h3>
-            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
-          </div>
-        </li>
-        <li>
-          <img src="assets/img/slider3.jpg" style="background-size: cover" />
-          <!-- random image -->
-          <div class="caption center-align">
-            <h3>Pembuatan struktur dan fungsionalitas situs!</h3>
-            <a href="#" class="btn blue darken-4 white-text">Pesan sekarang</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <!-- akhir header -->
-
-    <!-- pelayanan -->
-    <section class="section container" id="pelayanan">
-      <div class="row" id="pertama">
-        <div class="col s12 l4">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/2888/2888407.png"
-            alt="Layanan1"
-            class="responsive-img materialboxed" />
-        </div>
-        <div class="col s12 l6 offset-l1">
-          <h5 class="black-text text-darken-4">Pengembangan Aplikasi Web</h5>
-          <p>
-            Penting dalam membangun kehadiran online yang profesional dan
-            efektif. Dengan layanan ini, pengembang web dapat membantu
-            menciptakan situs web yang sesuai dengan kebutuhan klien dan dapat
-            meningkatkan brand awareness, pengalaman pengguna, serta keuntungan
-            bisnis.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 l4 offset-l1 push-l7">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/6188/6188099.png"
-            alt="Layanan1"
-            class="responsive-img materialboxed" />
-        </div>
-        <div class="col s12 l6 offset-l1 pull-l5 right-align">
-          <h5 class="black-text text-darken-4">Game Development</h5>
-          <p>
-            Mengintegrasikan sistem yang sudah ada dengan situs web yang baru
-            atau sebaliknya. Dalam layanan integrasi sistem, pengembang web
-            harus memiliki pengetahuan dan keterampilan teknis yang kuat untuk
-            dapat menghubungkan berbagai sistem dan memastikan bahwa semua
-            elemen dapat beroperasi dengan baik.
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12 l4">
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/6211/6211939.png"
-            alt="Layanan1"
-            class="responsive-img materialboxed" />
-        </div>
-        <div class="col s12 l6 offset-l1">
-          <h5 class="black-text text-darken-4">Mobile App Development</h5>
-          <p>
-            Desain dan Pembuatan Situs Web adalah layanan yang ditawarkan oleh
-            pengembang web untuk membuat situs web yang disesuaikan dengan
-            kebutuhan klien. Layanan ini mencakup perancangan tampilan situs
-            web, pembuatan struktur dan fungsionalitas situs
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- porfolio -->
-    <section class="section container" id="portfolio">
-      <h5 class="black-text" id="textPortfolio">Portfolio</h5>
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="card horizontal">
-            <div class="card-image">
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/9969/9969860.png"
-                class="responsive-img materialboxed" />
-            </div>
-            <div class="card-stacked">
-              <div class="card-content">
-                <p>
-                  Apliksi kalkultor website simpel dengan html css javacript
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card horizontal">
-            <div class="card-image">
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/3308/3308395.png"
-                class="responsive-img materialboxed" />
-            </div>
-
-            <div class="card-stacked">
-              <div class="card-content">
-                <p>
-                  Layanan ini mencakup perancangan tampilan situs web pembuatan
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card horizontal">
-            <div class="card-image">
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/9970/9970583.png"
-                class="responsive-img materialboxed" />
-            </div>
-            <div class="card-stacked">
-              <div class="card-content">
-                <p>List me aplikasi website sederhana dibangun dengan js</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="parallax-container">
-      <div class="parallax">
-        <img src="assets/img/parallax.jpg" />
-      </div>
-
-      <!-- contact -->
-      <section class="section container" id="kontak">
-        <div class="row">
-          <div class="col s12 l5">
-            <h4>Hubungi Kami</h4>
-            <p>
-              Kami mengundang Anda untuk berhubungan dengan kami dan mengetahui
-              lebih lanjut tentang layanan kami di bidang pembuatan web dan
-              pengembangan Apakah Anda memerlukan bantuan dalam membuat website
-              yang menarik dan fungsional? Silahkan hubungi kami untuk
-              mendapatkan solusi terbaik. Terhubung dengan kami adalah cara yang
-              tepat untuk memulai proyek pembuatan web atau pengembangan Anda.
-              Jangan ragu untuk mengontak kami dan memulai diskusi.
-            </p>
-          </div>
-          <div class="col s12 l5 offset-l2">
-            <form>
-              <div class="input-field">
-                <i class="material-icons prefix">email</i>
-                <input type="email" id="email-input" />
-                <label for="email-input">Masukan Email</label>
-              </div>
-              <div class="input-field">
-                <i class="material-icons prefix">message</i>
-                <textarea
-                  name="message"
-                  class="materialize-textarea"
-                  id="message-input"
-                  cols="30"
-                  rows="10"></textarea>
-                <label for="message-input">Masukan Pesan Anda</label>
-              </div>
-              <div class="input-field">
-                <input type="text" id="date" class="datepicker" readonly />
-                <label for="date">Pilih Tanggal Anda</label>
-              </div>
-              <div class="input-field">
-                <p class="white-text">Layanan Required</p>
-                <p>
-                  <label>
-                    <input type="checkbox" />
-                    <span>Web Developer</span>
-                  </label>
-                </p>
-                <p>
-                  <label>
-                    <input type="checkbox" />
-                    <span>Mobile App Development</span>
-                  </label>
-                </p>
-                <p>
-                  <label>
-                    <input type="checkbox" />
-                    <span>Game Development</span>
-                  </label>
-                </p>
-              </div>
-              <div class="input-field center">
-                <button class="btn blue darken-4 white-text">Kirim</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <!-- footer -->
-    <footer class="page-footer white">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="black-text">Tentang Kami</h5>
-            <p class="black-text text-darken-4">
-              closeheat adalah website yang menyediakan berbagai kursus online,
-              tutorial, dan sertifikasi di bidang teknologi informasi. Website
-              ini bertujuan untuk meningkatkan keterampilan teknis dan membantu
-              para pengembang web, pemula maupun profesional, untuk mempelajari
-              teknologi terkini dan terbaru.
-            </p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="black-text">Media Sosial</h5>
-            <ul>
-              <li><a class="black-text text-darken-3" href="#!">Github</a></li>
-              <li>
-                <a class="black-text text-darken-3" href="#!">Showwcase</a>
-              </li>
-              <li><a class="black-text text-darken-3" href="#!">Linkid</a></li>
-              <li>
-                <a class="black-text text-darken-3" href="#!">Instagram</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container black-text">
-          © 2014 copyright closeheat!
-          <a
-            class="blue-text text-darken-4 center-align"
-            href="https://www.instagram.com/mhaemnn/"
-            >muhaemin</a
-          >
-        </div>
-      </div>
-    </footer>
-
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- script js -->
-    <script src="assets/js/script.js"></script>
+    <h1>Hello, world!</h1>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
   </body>
 </html>
