add navbar in html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>muhaemin</title>
+    <!-- link Icon -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <!-- link file css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"></script>
+    <!-- navbar -->
+    <div class="header">
+      <i id="btn-menu" class="fa-solid fa-bars"></i>
+      <div class="contanier">
+        <a href="" class="logo">muhaemin</a>
+        <div id="menu" class="nav-links">
+          <a href="#">about</a>
+          <a href="#">blog</a>
+          <a href="#">project</a>
+          <a href="#">illustrasion</a>
+          <a
+            href="https://github.com/mhaemnn"
+            class="desktop-only item git-hub"
+            target="_blank"
+            rel="noreferrer"
+            ><span>GitHub</span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              style="width: 1rem; height: 1rem; fill: currentColor">
+              <g data-name="Layer 2">
+                <g data-name="external-link">
+                  <rect width="24" height="24" opacity="0"></rect>
+                  <path
+                    d="M20 11a1 1 0 0 0-1 1v6a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h6a1 1 0 0 0 0-2H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-6a1 1 0 0 0-1-1z"></path>
+                  <path
+                    d="M16 5h1.58l-6.29 6.28a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0L19 6.42V8a1 1 0 0 0 1 1 1 1 0 0 0 1-1V4a1 1 0 0 0-1-1h-4a1 1 0 0 0 0 2z"></path>
+                </g>
+              </g></svg
+          ></a>
+        </div>
+      </div>
+    </div>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
